# DeepX_hackathon

./: .gitignore  CLAUDE.md  CONTRACTS.md  DESIGN.md  PLAN.md  README.md  RUNBOOK.md  TODOS.md
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  contracts.py  errors.py  main.py  parser.py  sample_models.py  service.py
apps/api/tests/: test_service.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
apps/web/src/data/: mockReport.ts
