[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paladin-api"
version = "0.1.0"
description = "Paladin MVP FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "onnx>=1.21.0",
  "python-multipart>=0.0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
paladin-api = "app.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

